i3config filetype, new colorscheme, nerdtree git plugin

--- a/.config/ranger/history
+++ b/.config/ranger/history
@@ -1,5 +1,38 @@
 unzip
-delete
-open_with 
 search xdg
+!java solution.java
+j
+!python3 install.py
+search bin
+search idea
+llllllllllllllk
+rm A
+remove A.txt
+delete A.txt
+delete c_out
+delete c_out.txt
+!mkdir bots
+shell nvim .ideavirmc %s
 shell 
+search test
+!mkdir AI
+mkdir
+mkdir AI-Draughts
+search .config
+
+search config
+search ranger
+shell -p sudo bash netbeans
+shell -p sudo bash netbeans 
+ll
+search con
+delete
+search conf
+rename netbeansS
+search .local
+open_with 
+open_with v
+open_with nvim
+./configure
+q]
+search xi
